6/7/12 delete spinner implementation and image files that were based on fractions sim [64786]
6/7/12 revert to gray for non-interactive parts of equation
# 0.00.17 (64784) Jun 7, 2012
6/7/12 dev version with black for non-interactive parts of equation (requested by KP)
# 0.00.16 (64780) Jun 7, 2012
6/7/12 additional refinements to spinners, based on meeting with AP
6/5/12 fix sign of intercept in equation
6/5/12 clean up constructor interfaces for interactive equations
6/5/12 use neutral blue for background of graph controls
6/5/12 subscripts on x1 and y1
6/5/12 add whitespace to formatting of point-slope equation in title bar of equation control panel
6/5/12 use low-sautration magenta for x1,y1 point color
6/5/12 make spinner arrows slight wider (20->26)
6/5/12 use plain font style for static elements of interactive equations
6/5/12 increase equation font size to 28 pt
# 0.00.15 (64643) Jun 4, 2012
6/4/12 refinements to new spinners in interactive equations
6/4/12 fix width of slope spinners
6/4/12 improve "continuous spin" behavior of spinners, cleanup, refinement
6/4/12 add paint strategies (solid & gradient) to spinner background
6/4/12 add rounded corners to background areas of spinners, using CAG
# 0.00.14 (64615) Jun 4, 2012
6/4/12 first pass at new spinner design in interactive equations
5/31/12 always update line manipulators on endDrag, so that equation is displayed
5/31/12 snap to grid while dragging line manipulators (flag LGConstants.SNAP_TO_GRID_WHILE_DRAGGING)
5/31/12 right justify numbers in spinners
5/31/12 point-slope: don't change sign in static part of interactive equation for spinners implementation
5/31/12 slope-intercept: don't change sign in static part of interactive equation for spinners implementation
5/31/12 increase stroke width of dividing line in interactive equations, standardize font size
5/30/12 fix copy constructor for StraightLine
5/30/12 point-slope: hide zeros when reducing equations